[tool.poetry]
name = "py-aoc"
version = "0.1.0"
description = ""
authors = ["Justin Wood <Callek@gmail.com>"]

[tool.poetry.scripts]
aoc = "py_aoc.main:main"
aoc-1 = "py_aoc.day1:main"
aoc-2 = "py_aoc.day2:main"
aoc-3 = "py_aoc.day3:main"
aoc-4 = "py_aoc.day4:main"
aoc-5 = "py_aoc.day5:main"
aoc-6 = "py_aoc.day6:main"
aoc-7 = "py_aoc.day7:main"
aoc-8 = "py_aoc.day8:main"
aoc-9 = "py_aoc.day9:main"
aoc-10 = "py_aoc.day10:main"
aoc-11 = "py_aoc.day11:main"
aoc-12 = "py_aoc.day12:main"
aoc-13 = "py_aoc.day13:main"
aoc-14 = "py_aoc.day14:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pylint = "^2.14.4"
black = { git = "https://github.com/psf/black.git", branch = "main" }
mypy = "^0.991"
pytest = "^7.1.2"
tox = "^3.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
